--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/aslan-core:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}
