--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 export REDIS_URL=redis://localhost:6379/0
+export ELASTICSEARCH_URL=https://localhost:9200
+export ELASTICSEARCH_USERNAME=elastic
+export ELASTICSEARCH_PASSWORD=60du992gE4Ln3w14xOTUP0Wd
+export ELASTICSEARCH_DISABLE_TLS_VERIFY=true
+
