--- a/aslan-core/Cargo.toml
+++ b/aslan-core/Cargo.toml
@@ -23,6 +23,7 @@ elasticsearch = "8.5.0-alpha.1"
 sentry = "0.29.1"
 sentry-actix = "0.29.1"
 chrono = { version = "0.4" }
+logging_timer ={version="1.1.0"}
 
 [dependencies.mongodb]
 version = "2.3.1"
