--- a/aslan-core/Cargo.toml
+++ b/aslan-core/Cargo.toml
@@ -19,11 +19,14 @@ actix-web = "4"
 env_logger = "0.8"
 log = "^0.4"
 futures = "0.3"
-elasticsearch = "8.5.0-alpha.1"
 sentry = "0.29.1"
 sentry-actix = "0.29.1"
 chrono = { version = "0.4" }
 logging_timer ={version="1.1.0"}
+anyhow = "1"
+lapin = "2.1.1"
+tokio-executor-trait = "2.0.1"
+tokio-reactor-trait = "1.1.0"
 
 [dependencies.mongodb]
 version = "2.3.1"
