--- a/aslan-data/Cargo.toml
+++ b/aslan-data/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 apca = "0.24.0"
 chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+polars = { version = "0.29.0", features = ["lazy"] }
