--- a/aslan-core/Cargo.toml
+++ b/aslan-core/Cargo.toml
@@ -28,6 +28,9 @@ lapin = "2.1.1"
 tokio-executor-trait = "2.0.1"
 tokio-reactor-trait = "1.1.0"
 polars = { version = "0.29.0", features = ["lazy"] }
+burn = "0.7.0"
+burn-ndarray = "0.7.0"
+burn-autodiff = "0.7.0"
 
 [dependencies.mongodb]
 version = "2.3.1"
